# daudin-delarue-moonsdata

./: .gitignore  LICENSE  README.md  colab_experiment_G.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
codigo/: __init__.py  __main__.py  config.py  data.py  daudin_delarue_moons.py  main.py  metrics.py  model.py  plots.py  train.py
codigo/experiments/: __init__.py  exp_a.py  exp_b.py  exp_c.py  exp_d.py  exp_e.py  exp_f.py  exp_g.py  exp_h.py  exp_i.py  exp_j.py  exp_k.py
docs/: DOCUMENTACION.md  EXPERIMENTO.md  arquitectura_matematica.aux  arquitectura_matematica.out  arquitectura_matematica.tex  arquitectura_matematica.toc  notas.md  notas2.md  slides_DEF.tex  slides_moons.tex
paper/: README.md
paper/draft/: metodos_computacionales.tex
paper/src/01_solucion_explicita/: data.py  explicit_solver.py  run.py  run_continuation.py
paper/src/02_regularizadores_moons/: __init__.py  data.py  explicit_nd.py  run_comparison.py  run_explicit_moons.py  sgld_vanilla.py
paper/src/03_regresion_multivariada/: __init__.py  data.py  run_explicit_top2.py  run_regression.py  sgld_vanilla_reg.py
paper/src/04_metodos_alternativos/: __init__.py  bridge_distributions.py  qmc_explicit.py
paper/src/05_economia/: data_acs.py  run_acs.py
paper/src/06_trabajo_futuro/: rates_results.csv  replot_rates.py  run_mfl_rates.py
